--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+    
+        <!-- Facemesh model import -->
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>
+    
+        <!-- Our code goes in here -->
+        <script src="facemeshsetup.js"></script>
     </head>
     <body>
-        <h1>Test</h1>
+	    <!-- HTML Canvas we're drawing onto -->
+	    <canvas id="facecanvas"></canvas>
+  
+	    <!-- Video that handles the browser access to the camera. The transforms mirror the feed -->
+	    <video autoplay muted hidden playsinline id="video"  style="-webkit-transform: scaleX(-1);transform: scaleX(-1);width: auto;height: auto;">
+	    </video>
     </body>
 </html>
