--- a/index.html
+++ b/index.html
@@ -8,23 +8,16 @@
         <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
         <script>
             let millipas = 0;
-            function getacclr(){
-                const aclr = new Accelerometer();
-                aclr.addEventListener("reading", () => {
-                    document.getElementById("x-acclr").innerHTML = aclr.x;
-                    document.getElementById("y-acclr").innerHTML = aclr.y;
-                    document.getElementById("z-acclr").innerHTML = aclr.z;
-                });
-                aclr.start();
-                millipas = millipas + 1;
-                document.getElementById("millipast").innerHTML = millipas;
-                setTimeout(getacclr, 1);
-            }
             const acl = new Accelerometer({ frequency: 60 });
             acl.addEventListener("reading", () => {
+                document.getElementById("x-acclr").innerHTML = acl.x;
+                document.getElementById("y-acclr").innerHTML = acl.y;
+                document.getElementById("z-acclr").innerHTML = acl.z;
                 console.log(`Acceleration along the X-axis ${acl.x}`);
                 console.log(`Acceleration along the Y-axis ${acl.y}`);
                 console.log(`Acceleration along the Z-axis ${acl.z}`);
+                millipas = millipas + 1;
+                document.getElementById("millipast").innerHTML = millipas;
             });
             acl.start();
         </script>
@@ -34,6 +27,5 @@
         y-acclr:<div id="y-acclr">0</div>
         z-acclr:<div id="z-acclr">0</div>
         millipas:<div id="millipast">0</div>
-        <button onclick="getacclr()">start</button>
     </body>
 </html>
