--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
             let millipas = 0;
             const acl = new Accelerometer({ frequency: 60 });
             acl.addEventListener("reading", () => {
-                document.getElementById("x-acclr").innerHTML = acl.x;
-                document.getElementById("y-acclr").innerHTML = acl.y;
-                document.getElementById("z-acclr").innerHTML = acl.z;
-                var ang = 90 - Math.round(57.2957 * Math.acos(acl.z/(Math.sqrt(acl.x**2 + acl.y**2 + acl.z**2))));
-                document.getElementById("angle").innerHTML = ang;
-                document.getElementById("line-0").style.transform = "translate(-50%,"+(ang-29)+"px)";
+                document.getElementById("x-acclr").innerHTML = Math.round(acl.x * 10) / 10;
+                document.getElementById("y-acclr").innerHTML = Math.round(acl.y * 10) / 10;
+                document.getElementById("z-acclr").innerHTML = Math.round(acl.z * 10) / 10;
+                var ang = 57.2957 * Math.acos(acl.z/(Math.sqrt(acl.x**2 + acl.y**2 + acl.z**2))) - 90;
+                document.getElementById("angle").innerHTML = Math.round(ang);
+                document.getElementById("line-0").style.transform = "translate(-50%,"+(ang*10 - 29)+"px)";
                 millipas = millipas + 1;
                 document.getElementById("millipast").innerHTML = millipas;
             });
