--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
         <script src="facemeshsetup.js"></script>
         <script>
             let millipas = 0;
-            const acl = new Accelerometer({ frequency: 60 });
+            const acl = new Accelerometer({ frequency: 10 });
             acl.addEventListener("reading", () => {
                 document.getElementById("x-acclr").innerHTML = Math.round(acl.x * 10) / 10;
                 document.getElementById("y-acclr").innerHTML = Math.round(acl.y * 10) / 10;
                 document.getElementById("z-acclr").innerHTML = Math.round(acl.z * 10) / 10;
-                var ang = 57.2957 * Math.acos(acl.z/(Math.sqrt(acl.x**2 + acl.y**2 + acl.z**2))) - 90;
+                var magn = Math.sqrt(acl.x**2 + acl.y**2 + acl.z**2);
+                document.getElementById("magn").innerHTML = Math.round(magn * 100) / 100;
+                var ang = 57.2957 * Math.acos(acl.z/magn) - 90;
                 document.getElementById("angle").innerHTML = Math.round(ang);
-                document.getElementById("line-0").style.transform = "translate(-50%,"+(ang*10 - 29)+"px)";
+                document.getElementById("line-0").style.transform = "translate(-50%,"+(ang*5 - 29)+"px)";
                 millipas = millipas + 1;
-                document.getElementById("millipast").innerHTML = millipas;
+                document.getElementById("millipast").innerHTML = millipas/10;
             });
             acl.start();
         </script>
@@ -70,6 +72,7 @@
                 x-acclr:<div id="x-acclr">0</div>
                 y-acclr:<div id="y-acclr">0</div>
                 z-acclr:<div id="z-acclr">0</div>
+                magnitude:<div id="magn">9.8</div>
                 angle:<div id="angle">0</div>
                 millipas:<div id="millipast">0</div>
             </div>
