--- a/settings.html
+++ b/settings.html
@@ -23,6 +23,7 @@
             function saveToLocalStorage() {
                 const inputValue = document.getElementById('myInput').value;
                 localStorage.setItem('Angle', inputValue);
+                alert("Angle saved as"+inputValue)
             }
         </script>
     </head>
